--- a/public/App.css
+++ b/public/App.css
@@ -70,18 +70,30 @@
     justify-content:space-between
  
 }
- .form-row{
+
+
+
+.form-row{
     min-width: 230px;
 } 
 
+input[type="text"],input[type="number"],select[name="EC2_name"],select[name="ami"],select[name="subnet"] {
+    width:200px;
+  }
+
+.gb{
+   display: flex;
+   align-items: center;
+} 
+
+
 .button-group{
-    margin: auto;
+    text-align: center;
+    width: 100%;
+    margin-top: 40px;
 }
 
-/* .the_form-group{
-    width: 500px;
 
-} */
 
 
 
@@ -91,7 +103,35 @@
     border-color: #28a745;
     box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 
-} 
+}
+
+.disk-1,.dynamic_disk{
+    position: relative;
+}
+
+.add_disk{
+    position: absolute;
+    right: 20px;
+    border:none;
+    background-color: #0e5c97;
+    color:#fff;
+    width:90px;
+    padding:0;
+}
+
+.remove_disk{
+    position: absolute;
+    right: 20px;
+    border:none;
+    background-color: #97950e;
+    color:#fff;
+    width:90px;
+    padding:0;
+}
+
+
+
+
 
 
 .alarm{
@@ -124,38 +164,42 @@
  .table.create{
     margin-top:2.8rem;
 
-}  
+} 
 
 .dropdown-menu {
    min-width: auto;
 } 
 
 
-
-
-.before-footer-space{
-    min-height: 20vh;
+/*無法作用
+.the_newline::after{
+    content: "\a";
+    white-space: pre;
 }
-
-.last-footer{ 
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    min-height: 50px;
-    color: white;
-    text-align: center;
-    
-   
-}
+*/
 
 
 table th,
 table td {
-  
+  /* font-size:10px; */
   text-align: center;
 } 
 
+
+.storage{
+    border: none; 
+    background-color: #fff;
+}
+.storage > svg  {
+    
+
+    transform: translate(0, -2px)
+}
+
+
+.ip_svg{
+    transform: translate(0, -2px)
+}
 
  .clip_loader {
 
@@ -244,6 +288,27 @@ table td {
 
   }
 
+.before-footer-space{
+    min-height: 20vh;
+}
+
+.last-footer{ 
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    min-height: 50px;
+    color: white;
+    text-align: center;
+    
+   
+}
+
+
+
+
+
+
 
 @media screen and (min-width:766px) and (max-width:995px){ 
     .search{
@@ -282,6 +347,10 @@ table td {
   }  
 
 
-  
-
+  /* input的數字不要有箭頭->Chrome, Safari, Edge, Opera */ 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
